# agentcore-browser-dynatrace

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: blog.md
infra/: iam-policy.json
src/: agent_browser.py  os_actions_demo.py  otel_setup.py
